.k8s/manifests/deplyment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-moneybox
  namespace: moneybox
  labels:
    app: django-moneybox
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django-moneybox
  template:
    metadata:
      labels:
        app: django-moneybox
    spec:
      containers:
      - name: django-moneybox
        image: error0x001/moneybox_backend:0.0.1-rc2
        imagePullPolicy: Always
        ports:
          - name: default
            containerPort: 8000
        livenessProbe:
          httpGet:
            path: /healthcheck/
            port: default
            scheme: HTTP
          timeoutSeconds:
            10
          periodSeconds:
            100
        volumeMounts:
          - name: django-moneybox-static-volume
            mountPath: /app/static
        command:
          - gunicorn
          - moneybox.wsgi:application
          - --bind
          - 0.0.0.0:8000
      volumes:
        - name: django-moneybox-static-volume
          emptyDir: { }
